// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`t-foreach does not pollute the rendering context 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    const [v1, k1, l1] = getValues([1]);
    const b2 = b1.children[0] = new BCollection(l1);
    ctx = Object.create(ctx);
    for (let i1 = 0; i1 < l1; i1++) {
      ctx[\`item\`] = v1[i1];
      ctx[\`item_first\`] = i1 === 0;
      ctx[\`item_last\`] = i1 === v1.length - 1;
      ctx[\`item_index\`] = i1;
      ctx[\`item_value\`] = k1[i1];
      let key1 = ctx['item'];
      b2.children[i1] = new BText(ctx['item']);
      b2.keys[i1] = key1;
    }
    return b1;
  }
}"
`;

exports[`t-foreach iterate on items (on a element node) 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  class Block2 extends BNode {
    static el = elem(\`<span><owl-text/></span>\`);
    data = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.data[0]);
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    const [v1, k1, l1] = getValues([1,2]);
    const b2 = b1.children[0] = new BCollection(l1);
    ctx = Object.create(ctx);
    for (let i1 = 0; i1 < l1; i1++) {
      ctx[\`item\`] = v1[i1];
      ctx[\`item_first\`] = i1 === 0;
      ctx[\`item_last\`] = i1 === v1.length - 1;
      ctx[\`item_index\`] = i1;
      ctx[\`item_value\`] = k1[i1];
      let key1 = ctx['item'];
      const b3 = b2.children[i1] = new Block2();
      b3.data[0] = ctx['item'];
      b2.keys[i1] = key1;
    }
    return b1;
  }
}"
`;

exports[`t-foreach iterate on items 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    const [v1, k1, l1] = getValues([3,2,1]);
    const b2 = b1.children[0] = new BCollection(l1);
    ctx = Object.create(ctx);
    for (let i1 = 0; i1 < l1; i1++) {
      ctx[\`item\`] = v1[i1];
      ctx[\`item_first\`] = i1 === 0;
      ctx[\`item_last\`] = i1 === v1.length - 1;
      ctx[\`item_index\`] = i1;
      ctx[\`item_value\`] = k1[i1];
      let key1 = ctx['item'];
      const b3 = b2.children[i1] = new BMulti(7);
      b3.children[0] = new BText(\` [\`);
      b3.children[1] = new BText(ctx['item_index']);
      b3.children[2] = new BText(\`: \`);
      b3.children[3] = new BText(ctx['item']);
      b3.children[4] = new BText(\` \`);
      b3.children[5] = new BText(ctx['item_value']);
      b3.children[6] = new BText(\`] \`);
      b2.keys[i1] = key1;
    }
    return b1;
  }
}"
`;

exports[`t-foreach iterate, dict param 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    const [v1, k1, l1] = getValues(ctx['value']);
    const b2 = b1.children[0] = new BCollection(l1);
    ctx = Object.create(ctx);
    for (let i1 = 0; i1 < l1; i1++) {
      ctx[\`item\`] = v1[i1];
      ctx[\`item_first\`] = i1 === 0;
      ctx[\`item_last\`] = i1 === v1.length - 1;
      ctx[\`item_index\`] = i1;
      ctx[\`item_value\`] = k1[i1];
      let key1 = ctx['item_index'];
      const b3 = b2.children[i1] = new BMulti(7);
      b3.children[0] = new BText(\` [\`);
      b3.children[1] = new BText(ctx['item_index']);
      b3.children[2] = new BText(\`: \`);
      b3.children[3] = new BText(ctx['item']);
      b3.children[4] = new BText(\` \`);
      b3.children[5] = new BText(ctx['item_value']);
      b3.children[6] = new BText(\`] \`);
      b2.keys[i1] = key1;
    }
    return b1;
  }
}"
`;

exports[`t-foreach iterate, position 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    const [v1, k1, l1] = getValues(Array(5));
    const b2 = b1.children[0] = new BCollection(l1);
    ctx = Object.create(ctx);
    for (let i1 = 0; i1 < l1; i1++) {
      ctx[\`elem\`] = v1[i1];
      ctx[\`elem_first\`] = i1 === 0;
      ctx[\`elem_last\`] = i1 === v1.length - 1;
      ctx[\`elem_index\`] = i1;
      ctx[\`elem_value\`] = k1[i1];
      let key1 = ctx['elem'];
      const b3 = b2.children[i1] = new BMulti(6);
      b3.children[0] = new BText(\` -\`);
      if (ctx['elem_first']) {
        b3.children[1] = new BText(\` first\`);
      }
      if (ctx['elem_last']) {
        b3.children[2] = new BText(\` last\`);
      }
      b3.children[3] = new BText(\` (\`);
      b3.children[4] = new BText(ctx['elem_index']);
      b3.children[5] = new BText(\`) \`);
      b2.keys[i1] = key1;
    }
    return b1;
  }
}"
`;

exports[`t-foreach simple iteration (in a node) 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    const [v1, k1, l1] = getValues([3,2,1]);
    const b2 = b1.children[0] = new BCollection(l1);
    ctx = Object.create(ctx);
    for (let i1 = 0; i1 < l1; i1++) {
      ctx[\`item\`] = v1[i1];
      ctx[\`item_first\`] = i1 === 0;
      ctx[\`item_last\`] = i1 === v1.length - 1;
      ctx[\`item_index\`] = i1;
      ctx[\`item_value\`] = k1[i1];
      let key1 = ctx['item'];
      b2.children[i1] = new BText(ctx['item']);
      b2.keys[i1] = key1;
    }
    return b1;
  }
}"
`;

exports[`t-foreach simple iteration 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  return ctx => {
    const [v1, k1, l1] = getValues([3,2,1]);
    const b1 = new BCollection(l1);
    ctx = Object.create(ctx);
    for (let i1 = 0; i1 < l1; i1++) {
      ctx[\`item\`] = v1[i1];
      ctx[\`item_first\`] = i1 === 0;
      ctx[\`item_last\`] = i1 === v1.length - 1;
      ctx[\`item_index\`] = i1;
      ctx[\`item_value\`] = k1[i1];
      let key1 = ctx['item'];
      b1.children[i1] = new BText(ctx['item']);
      b1.keys[i1] = key1;
    }
    return b1;
  }
}"
`;

exports[`t-foreach simple iteration with two nodes inside 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<span>a<owl-text/></span>\`);
    data = new Array(1);
    update() {
      this.el.firstChild.nextSibling.textContent = toString(this.data[0]);
    }
  }
  
  class Block2 extends BNode {
    static el = elem(\`<span>b<owl-text/></span>\`);
    data = new Array(1);
    update() {
      this.el.firstChild.nextSibling.textContent = toString(this.data[0]);
    }
  }
  
  return ctx => {
    const [v1, k1, l1] = getValues([3,2,1]);
    const b1 = new BCollection(l1);
    ctx = Object.create(ctx);
    for (let i1 = 0; i1 < l1; i1++) {
      ctx[\`item\`] = v1[i1];
      ctx[\`item_first\`] = i1 === 0;
      ctx[\`item_last\`] = i1 === v1.length - 1;
      ctx[\`item_index\`] = i1;
      ctx[\`item_value\`] = k1[i1];
      let key1 = ctx['item'];
      const b2 = b1.children[i1] = new BMulti(2);
      const b3 = b2.children[0] = new Block1();
      b3.data[0] = ctx['item'];
      const b4 = b2.children[1] = new Block2();
      b4.data[0] = ctx['item'];
      b1.keys[i1] = key1;
    }
    return b1;
  }
}"
`;

exports[`t-foreach t-call with body in t-foreach in t-foreach 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  return ctx => {
    const b1 = new BMulti(7);
    b1.children[0] = new BText(\` [\`);
    b1.children[1] = new BText(ctx['a']);
    b1.children[2] = new BText(\`] [\`);
    b1.children[3] = new BText(ctx['b']);
    b1.children[4] = new BText(\`] [\`);
    b1.children[5] = new BText(ctx['c']);
    b1.children[6] = new BText(\`] \`);
    return b1;
  }
}"
`;

exports[`t-foreach t-call with body in t-foreach in t-foreach 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<div><owl-anchor/><span>[<owl-text/>][<owl-text/>][<owl-text/>]</span></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    data = new Array(3);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
    update() {
      const el1 = this.anchors[0].nextSibling.firstChild.nextSibling;
      el1.textContent = toString(this.data[0]);
      const el2 = el1.nextSibling.nextSibling;
      el2.textContent = toString(this.data[1]);
      el2.nextSibling.nextSibling.textContent = toString(this.data[2]);
    }
  }
  
  class Block2 extends BNode {
    static el = elem(\`<span><owl-text/></span>\`);
    data = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.data[0]);
    }
  }
  
  return (ctx, refs = {}) => {
    ctx = Object.create(ctx);
    ctx[scope] = 1;
    const b1 = new Block1();
    const [v1, k1, l1] = getValues(ctx['numbers']);
    const b2 = b1.children[0] = new BCollection(l1);
    ctx = Object.create(ctx);
    for (let i1 = 0; i1 < l1; i1++) {
      ctx[\`a\`] = v1[i1];
      ctx[\`a_first\`] = i1 === 0;
      ctx[\`a_last\`] = i1 === v1.length - 1;
      ctx[\`a_index\`] = i1;
      ctx[\`a_value\`] = k1[i1];
      let key1 = ctx['a'];
      const b3 = b2.children[i1] = new BMulti(2);
      const [v2, k2, l2] = getValues(ctx['letters']);
      const b4 = b3.children[0] = new BCollection(l2);
      ctx = Object.create(ctx);
      for (let i2 = 0; i2 < l2; i2++) {
        ctx[\`b\`] = v2[i2];
        ctx[\`b_first\`] = i2 === 0;
        ctx[\`b_last\`] = i2 === v2.length - 1;
        ctx[\`b_index\`] = i2;
        ctx[\`b_value\`] = k2[i2];
        let key2 = ctx['b'];
        ctx = Object.create(ctx);
        ctx[\`c\`] = 'x'+'_'+ctx['a']+'_'+ctx['b'];
        b4.children[i2] = call(\`sub\`, ctx, refs);
        ctx = ctx.__proto__;
        b4.keys[i2] = key2;
      }
      ctx = ctx.__proto__;
      const b5 = b3.children[1] = new Block2();
      b5.data[0] = ctx['c'];
      b2.keys[i1] = key1;
    }
    ctx = ctx.__proto__;
    b1.data[0] = ctx['a'];
    b1.data[1] = ctx['b'];
    b1.data[2] = ctx['c'];
    b1.refs = refs;
    return b1;
  }
}"
`;

exports[`t-foreach t-call without body in t-foreach in t-foreach 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new BMulti(7);
    ctx[\`c\`] = 'x'+'_'+ctx['a']+'_'+ctx['b'];
    b1.children[0] = new BText(\` [\`);
    b1.children[1] = new BText(ctx['a']);
    b1.children[2] = new BText(\`] [\`);
    b1.children[3] = new BText(ctx['b']);
    b1.children[4] = new BText(\`] [\`);
    b1.children[5] = new BText(ctx['c']);
    b1.children[6] = new BText(\`] \`);
    return b1;
  }
}"
`;

exports[`t-foreach t-call without body in t-foreach in t-foreach 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<div><owl-anchor/><span>[<owl-text/>][<owl-text/>][<owl-text/>]</span></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    data = new Array(3);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
    update() {
      const el1 = this.anchors[0].nextSibling.firstChild.nextSibling;
      el1.textContent = toString(this.data[0]);
      const el2 = el1.nextSibling.nextSibling;
      el2.textContent = toString(this.data[1]);
      el2.nextSibling.nextSibling.textContent = toString(this.data[2]);
    }
  }
  
  class Block2 extends BNode {
    static el = elem(\`<span><owl-text/></span>\`);
    data = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.data[0]);
    }
  }
  
  return (ctx, refs = {}) => {
    ctx = Object.create(ctx);
    ctx[scope] = 1;
    const b1 = new Block1();
    const [v1, k1, l1] = getValues(ctx['numbers']);
    const b2 = b1.children[0] = new BCollection(l1);
    ctx = Object.create(ctx);
    for (let i1 = 0; i1 < l1; i1++) {
      ctx[\`a\`] = v1[i1];
      ctx[\`a_first\`] = i1 === 0;
      ctx[\`a_last\`] = i1 === v1.length - 1;
      ctx[\`a_index\`] = i1;
      ctx[\`a_value\`] = k1[i1];
      let key1 = ctx['a'];
      const b3 = b2.children[i1] = new BMulti(2);
      const [v2, k2, l2] = getValues(ctx['letters']);
      const b4 = b3.children[0] = new BCollection(l2);
      ctx = Object.create(ctx);
      for (let i2 = 0; i2 < l2; i2++) {
        ctx[\`b\`] = v2[i2];
        ctx[\`b_first\`] = i2 === 0;
        ctx[\`b_last\`] = i2 === v2.length - 1;
        ctx[\`b_index\`] = i2;
        ctx[\`b_value\`] = k2[i2];
        let key2 = ctx['b'];
        b4.children[i2] = call(\`sub\`, ctx, refs);
        b4.keys[i2] = key2;
      }
      ctx = ctx.__proto__;
      const b5 = b3.children[1] = new Block2();
      b5.data[0] = ctx['c'];
      b2.keys[i1] = key1;
    }
    ctx = ctx.__proto__;
    b1.data[0] = ctx['a'];
    b1.data[1] = ctx['b'];
    b1.data[2] = ctx['c'];
    b1.refs = refs;
    return b1;
  }
}"
`;

exports[`t-foreach t-foreach in t-foreach 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    const [v1, k1, l1] = getValues(ctx['numbers']);
    const b2 = b1.children[0] = new BCollection(l1);
    ctx = Object.create(ctx);
    for (let i1 = 0; i1 < l1; i1++) {
      ctx[\`number\`] = v1[i1];
      ctx[\`number_first\`] = i1 === 0;
      ctx[\`number_last\`] = i1 === v1.length - 1;
      ctx[\`number_index\`] = i1;
      ctx[\`number_value\`] = k1[i1];
      let key1 = ctx['number'];
      const [v2, k2, l2] = getValues(ctx['letters']);
      const b3 = b2.children[i1] = new BCollection(l2);
      ctx = Object.create(ctx);
      for (let i2 = 0; i2 < l2; i2++) {
        ctx[\`letter\`] = v2[i2];
        ctx[\`letter_first\`] = i2 === 0;
        ctx[\`letter_last\`] = i2 === v2.length - 1;
        ctx[\`letter_index\`] = i2;
        ctx[\`letter_value\`] = k2[i2];
        let key2 = ctx['letter'];
        const b4 = b3.children[i2] = new BMulti(4);
        b4.children[0] = new BText(\` [\`);
        b4.children[1] = new BText(ctx['number']);
        b4.children[2] = new BText(ctx['letter']);
        b4.children[3] = new BText(\`] \`);
        b3.keys[i2] = key2;
      }
      ctx = ctx.__proto__;
      b2.keys[i1] = key1;
    }
    return b1;
  }
}"
`;

exports[`t-foreach t-foreach with t-if inside (no external node) 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<span><owl-text/></span>\`);
    data = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.data[0]);
    }
  }
  
  return ctx => {
    const [v1, k1, l1] = getValues(ctx['elems']);
    const b1 = new BCollection(l1);
    ctx = Object.create(ctx);
    for (let i1 = 0; i1 < l1; i1++) {
      ctx[\`elem\`] = v1[i1];
      ctx[\`elem_first\`] = i1 === 0;
      ctx[\`elem_last\`] = i1 === v1.length - 1;
      ctx[\`elem_index\`] = i1;
      ctx[\`elem_value\`] = k1[i1];
      let key1 = ctx['elem'].id;
      const b2 = b1.children[i1] = new BMulti(1);
      if (ctx['elem'].id<3) {
        const b3 = b2.children[i1] = new Block1();
        b3.data[0] = ctx['elem'].text;
      }
      b1.keys[i1] = key1;
    }
    return b1;
  }
}"
`;

exports[`t-foreach t-foreach with t-if inside 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  class Block2 extends BNode {
    static el = elem(\`<span><owl-text/></span>\`);
    data = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.data[0]);
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    const [v1, k1, l1] = getValues(ctx['elems']);
    const b2 = b1.children[0] = new BCollection(l1);
    ctx = Object.create(ctx);
    for (let i1 = 0; i1 < l1; i1++) {
      ctx[\`elem\`] = v1[i1];
      ctx[\`elem_first\`] = i1 === 0;
      ctx[\`elem_last\`] = i1 === v1.length - 1;
      ctx[\`elem_index\`] = i1;
      ctx[\`elem_value\`] = k1[i1];
      let key1 = ctx['elem'].id;
      const b3 = b2.children[i1] = new BMulti(1);
      if (ctx['elem'].id<3) {
        const b4 = b3.children[i1] = new Block2();
        b4.data[0] = ctx['elem'].text;
      }
      b2.keys[i1] = key1;
    }
    return b1;
  }
}"
`;

exports[`t-foreach t-key on an inside node 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<p><owl-text/></p>\`);
    data = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.data[0]);
    }
  }
  
  return ctx => {
    const [v1, k1, l1] = getValues([3,2,1]);
    const b1 = new BCollection(l1);
    ctx = Object.create(ctx);
    for (let i1 = 0; i1 < l1; i1++) {
      ctx[\`item\`] = v1[i1];
      ctx[\`item_first\`] = i1 === 0;
      ctx[\`item_last\`] = i1 === v1.length - 1;
      ctx[\`item_index\`] = i1;
      ctx[\`item_value\`] = k1[i1];
      let key1 = i1;
      key1 = ctx['item'];
      const b2 = b1.children[i1] = new Block1();
      b2.data[0] = ctx['item'];
      b1.keys[i1] = key1;
    }
    return b1;
  }
}"
`;
